--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint"
+    "lint": "eslint",
+    "start": "lite-server ./index.html"
   },
   "repository": "https://github.com/Amriesgrace/BYARENT.git",
   "author": "Amriesgrace <obieri.grace@gmail.com>",
@@ -21,6 +22,7 @@
     "eslint": "^5.14.1",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.0",
+    "lite-server": "^2.4.0",
     "mocha": "^6.0.2",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.18.10",
