--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "BYARENT",
+  "name": "byarent",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "lint": "eslint",
-    "start": "lite-server ./index.html"
+    "start": "nodemon --exec babel-node ./server/lib/server.js"
   },
   "repository": "https://github.com/Amriesgrace/BYARENT.git",
   "author": "Amriesgrace <obieri.grace@gmail.com>",
