--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lite-server": "^2.4.0",
     "mocha": "^6.0.2",
     "mocha-lcov-reporter": "^1.3.0",
+    "multer": "^1.4.1",
     "nodemon": "^1.18.10",
     "nyc": "^13.3.0",
     "passport": "^0.4.0",
